page pictures load,  with self pic load reddit alien

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,11 +1,10 @@
-#navBar {
+#navBar{
   background-color: grey;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   font-size: 20px;
   font-weight: bold;
-  padding: 5px; }
+  padding: 5px;
+}
 
-body {
-  background: url(/assets/bg.jpg); }
