vertical div class with pictures loaded

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,7 +7,7 @@ $instagram_orange: url(/assets/instagram_orange.svg);
 $logo: url(/assets/logo.svg);
 
 @import "partials/header";
-
+@import "partials/body";
 
 body{
   background: $main;
