--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,7 @@ $logo: url(/assets/logo.svg);
 
 @import "partials/header";
 @import "partials/body";
+@import "partials/footer";
 
 body{
   background: $main;
