--- a/scss/partials/_body.scss
+++ b/scss/partials/_body.scss
@@ -20,11 +20,17 @@
       justify-content: center;
       padding: 10px;
     }
+    .titleContent:hover{
+      cursor: pointer;
+    }
     .thumbnailContent{
       display: flex;
       align-items: center;
       border:black solid 1px;
       margin-top: 5px;
+    }
+    .thumbnailContent:hover{
+      cursor: pointer;
     }
   }
 }
