--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -28,9 +28,16 @@
     font-size: 20px;
     margin: 10px;
   }
+  #searchButton:hover{
+    cursor: pointer;
+  }
   #searchBar{
     display: flex;
     font-size: 20px;
     margin: 10px;
   }
+}
+
+.navButton:hover{
+  cursor: pointer;
 }
